# cargo-deb-workspace-problem

./: Cargo.toml
my-deb/: Cargo.toml  stuff.json
